2008-01-06  Mathieu Blondel <mblondel@svn.gnome.org>

	* www.gnome.org/projects/fantasdic/index.html: Updated for 1.0-beta5
	release of Fantasdic.

2007-12-24  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/data/screenshots/cheese-0.3.0.jpg,
	  www.gnome.org/projects/cheese/Makefile.am,
	  www.gnome.org/projects/cheese/screenshots.html: 
	  add a screenshot for the 0.3.0 release of cheese

2007-12-24  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/download.html,
	  www.gnome.org/projects/cheese/index.html: 
	  cheese 0.3.0, yay!

2007-12-24  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/download.html: 
	  cheese has its tarballs now on ftp.gnome.org

2007-12-16  Ricky Zhou  <ricky.zhou@gmail.com>

	* www.gnome.org/img/flash/ghop-2007.png: Put up Ed Catmur's GIMPed banner
	to fix a typo.  Fixes bug #502740.  

2007-12-16  Andreas Nilsson <nisses.mail@home.se>

	* www.gnome.org/index.wml: removed foss.in event as it's over.

2007-12-07  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/index.html: 
	  add a new news entry on cheese, remove the banner

2007-12-06  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* www.gnome.org/projects/index.wml: Added Conduit to project list.

2007-12-04  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/img/flash/Makefile.am: install the new GHOP image :-)

2007-12-03  Andreas Nilsson <nisses.mail@home.se>

	* www.gnome.org/index.wml: changed the banner to GHOP.

2007-12-03  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/index.html: fixed gnome@foss.in year.

2007-11-28  Ricky Zhou  <ricky.zhou@gmail.com>

	* www.gnome.org/projects/index.wml:
	  Correct Metacity capitalization, link to more recent source
	  directory (I was unable to find a main site for Metacity).  
	  Fixes bug #496083.  

2007-12-01  Andreas Nilsson  <nisses.mail@home.se>

	* www.gnome.org/index.wml: added gnome@foss.in event.
