@@ -213,6 +213,13 @@
 
         <div id="bottomRight">
           <h2>News</h2>
+
+          <h3>January 10th 2008</h3>
+          <p>
+          Cheese will be <a href="http://mail.gnome.org/archives/devel-announce-list/2008-January/msg00001.html">
+          included in GNOME 2.22</a>. YAY! 
+          </p>
+
           <h3>December 24th 2007</h3>
           <p>
           The Christmas release is out! Get it while it's hot and send us your
@@ -275,26 +282,6 @@
           <h3>August 21st 2007</h3>
           <p>
           Cheese 0.2.2 was released. <a href="download.html">Get it!</a>
-          </p>
-
-          <h3>August 20th 2007</h3>
-          <p>
-          Cheese 0.2.1 was released. <a href="download.html">Get it!</a>
-          </p>
-
-          <h3>August 15th 2007</h3>
-          <p>
-          Cheese 0.2.0 was released. <a href="download.html">Get it!</a>
-          </p>
-
-          <h3>August 2nd 2007</h3>
-          <p>
-          Cheese 0.1.4 was released. <a href="download.html">Get it!</a>
-          </p>
-
-          <h3>July 2nd 2007</h3>
-          <p>
-          Cheese 0.1.3 was released. <a href="download.html">Get it!</a>
           </p>
 
         </div>
