@@ -1,3 +1,8 @@
+2008-01-12  daniel g. siegel <dgsiegel@gmail.com>
+
+	* www.gnome.org/projects/cheese/index.html: 
+	  news for cheese
+
 2008-01-06  Mathieu Blondel <mblondel@svn.gnome.org>
 
 	* www.gnome.org/projects/fantasdic/index.html: Updated for 1.0-beta5
